# clientside-rule-processing

./: Cargo.toml  README.md
browser/: Cargo.toml  index.html
browser/pkg/: browser.d.ts  browser.js  browser_bg.wasm  browser_bg.wasm.d.ts  package.json
browser/src/: lib.rs  net.rs  parsing.rs
browser/src/net/: error.rs  model.rs
common/: Cargo.toml
common/src/: compound_rule.rs  event.rs  lib.rs  rule_result.rs  simple_rule.rs
common/src/compound_rule/: advancing.rs
common/src/compound_rule/advancing/: rule.rs
common/src/rule_result/: advancing.rs
common/src/simple_rule/: advancing.rs
common/src/simple_rule/advancing/: rule.rs
parser/: Cargo.toml
parser/src/: grammar.pest  lib.rs  parsing.rs
parser/src/parsing/: compound_rule.rs  rule_result.rs  simple_rule.rs
parser/src/parsing/compound_rule/: error.rs
parser/src/parsing/rule_result/: error.rs
parser/src/parsing/simple_rule/: error.rs
parser/tests/: compound_rule.rs  rule_result.rs  simple_rule.rs
processor/: Cargo.toml
processor/src/: core.rs
processor/src/core/: processing.rs
processor/tests/: compound_rule.rs  processing.rs  rule_result.rs  simple_rule.rs
src/: config.rs  core.rs  database.rs  lib.rs  main.rs
src/core/: complex_rule.rs  event.rs  result.rs  results.rs  rule.rs
src/core/complex_rule/: element.rs
src/core/complex_rule/element/: internals.rs
src/core/result/: element.rs  internals.rs
src/core/result/element/: internals.rs
src/core/results/: internals.rs
src/core/rule/: element.rs
src/core/rule/element/: internals.rs
