[package]
name = "browser"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { version = "0.1.0", path = "../common" }
parser = { version = "0.1.0", path = "../parser" }
processor = { version = "0.1.0", path = "../processor" }

anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["blocking", "json", "multipart"] }
serde = "1.0.204"
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-web = "0.1.3"