[package]
name = "browser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { version = "0.1.0", path = "../common" }
parser = { version = "0.1.0", path = "../parser" }
processor = { version = "0.1.0", path = "../processor" }

# not used directly
getrandom = { version = "0.2.15", features = ["js"] }

anyhow = "1.0.86"
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
serde = "1.0.204"
serde-wasm-bindgen = "0.6.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-web = "0.1.3"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"